<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_kandidat">

    <fragment android:id="@+id/navigation_profil"
              android:name="com.unsera.sipe3.ui.profil.ProfilFragment"
              android:label="@string/title_profil"/>

    <fragment
            android:id="@+id/navigation_kandidat"
            android:name="com.unsera.sipe3.ui.kandidat.KandidatFragment"
            android:label="@string/title_kandidat"
            tools:layout="@layout/fragment_kandidat"/>


    <fragment
            android:id="@+id/navigation_pengaduan"
            android:name="com.unsera.sipe3.ui.pengaduan.PengaduanFragment"
            android:label="@string/title_pengaduan"
            tools:layout="@layout/fragment_pengaduan"/>

    <fragment
            android:id="@+id/navigation_pelanggaran"
            android:name="com.unsera.sipe3.ui.pelanggaran.PelanggaranFragment"
            android:label="@string/title_pelanggaran"
            tools:layout="@layout/fragment_pelanggaran"/>

    <fragment android:id="@+id/navigation_pasal_pelanggaran"
              android:name="com.unsera.sipe3.ui.pasal.PasalFragment"
              android:label="@string/title_pasal_pelanggaran"/>

</navigation>